fix: Fix some minor layout bugs in Article Grid component

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -47,7 +47,7 @@
   grid-area: welcome;
   padding: $lcc-space--md;
   min-width: 250px;  
-  // max-width: 800px;
+  max-width: 800px;
 
   p {
     font-size: calc($h4 + 2px);
